minor adjustments to dataoutputter